changes to add dm creation and resume send functionality on application creation
